fixed spacing errors

--- a/style.css
+++ b/style.css
@@ -202,34 +202,12 @@ video {
 
 .header2{
     width: 100%;
-    height: 100vh;
     position: relative;
     top: 0; 
     left: 0;
     color: #FFF;
     padding: 0 10%;
-    background: #000;
-}
-
-.header3{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    top: 0; 
-    left: 0;
-    color: #FFF;
-    padding: 0 10%;
-    background: #000;
-}
-
-.header4{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    top: 0; 
-    left: 0;
-    color: #FFF;
-    padding: 0 10%;
+    padding: 120px 10%;
     background: #000;
 }
 
@@ -420,8 +398,32 @@ video {
   padding: 8px 12px 0;
 }
 
-.format2{
-  float: left;
-  overflow: hidden;
-  margin: 30px;
+.projects-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  gap: 30px;
+  margin-top: 20px;
+}
+
+.section-title {
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+
+
+.format2 {
+  margin: 0;
+}
+
+.textbox4 {
+  flex-wrap: wrap;
+  justify-content: center; 
+  gap: 30px; 
+}
+
+.textbox4::after {
+    content: "";
+    display: table;
+    clear: both;
 }
